# target-minio-s3-parquet

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_minios3parquet/: sinks.py  target.py
tests/: test_core.py
